# spade_llm

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Justfile  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  robots.txt  setup.py  sitemap.xml  tox.ini
.github/workflows/: _test.yml  docs.yml  publish.yml  python-app.yml
contributing/: index.html
contributing/development/: index.html
docs/: index.md  mkdocs.yml  robots.txt
docs/contributing/: development.md  index.md
docs/docs/: index.md
docs/getting-started/: advanced-agent.md  first-agent.md  guardrails-tutorial.md  index.md  installation.md  quickstart.md  tools-tutorial.md
docs/guides/: architecture.md  context-management.md  conversations.md  coordinator-agent.md  guardrails.md  human-in-the-loop.md  index.md  mcp.md  memory-architecture.md  memory.md  providers.md  rag-system.md  routing.md  structured-output.md  tools-system.md
docs/includes/: mkdocs.md
docs/reference/: examples.md  index.md
docs/stylesheets/: custom.css
examples/: .env.example  document_workflow.py  document_workflow_example.py  github_issues_monitor_complex.py  github_issues_monitor_complex_example.py  guardrails.py  guardrails_example.py  langchain_tools.py  langchain_tools_example.py  multi_provider_chat.py  multi_provider_chat_example.py  ollama_with_tools.py  ollama_with_tools_example.py  rag_system_ollama_chroma.py  rag_system_ollama_chroma_example.py  rag_vs_no_rag.py  rag_vs_no_rag_demo.py  simple_coordinator.py  simple_coordinator_example.py  spanish_to_english_translator.py  trip_planner.py  valencia_smartCity_mcp.py  valencia_smartCity_mcp_example.py
examples/coordinador_predict3D_parameters/: coordinator_predict3D.py
examples/coordinator_params_predict/: coordinator_predict.py
getting-started/: index.html
getting-started/advanced-agent/: index.html
getting-started/first-agent/: index.html
getting-started/guardrails-tutorial/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/tools-tutorial/: index.html
guides/: index.html
guides/architecture/: index.html
guides/context-management/: index.html
guides/conversations/: index.html
guides/coordinator-agent/: index.html
guides/guardrails/: index.html
guides/human-in-the-loop/: index.html
guides/mcp/: index.html
guides/memory/: index.html
guides/memory-architecture/: index.html
guides/providers/: index.html
javascripts/: mathjax.js
reference/: index.html
search/: search_index.json
spade_llm/: __init__.py  __main__.py  version.py
tests/: conftest.py  factories.py
(+153 files in other folders)
